--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "ajv": "^8.11.0",
-    "ajv-keywords": "^5.1.0",
-    "eas-cli": "^16.9.0",
-    "expo": "~53.0.9",
+    "buffer": "^6.0.3",
+    "expo": "53.0.11",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.7",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
@@ -48,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/expo": "^32.0.13",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
