--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "buffer": "^6.0.3",
-    "expo": "53.0.11",
+    "expo": "^53.0.11",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.7",
     "expo-constants": "~17.1.6",
