--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "moodify",
     "slug": "moodify",
     "version": "1.0.0",
+    "sdkVersion": "53.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "moodify",
