--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "buffer": "^6.0.3",
-    "expo": "53.0.11",
+    "expo": "^53.0.11",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.7",
     "expo-constants": "~17.1.6",
@@ -34,7 +34,8 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
-    "react": "^19.0.0",
+    "lottie-react-native": "^7.2.2",
+    "react": "^19.1.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.3",
     "react-native-gesture-handler": "~2.24.0",
@@ -48,7 +49,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/expo": "^32.0.13",
+    "@types/node": "^24.0.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "^5.8.3"
